[package]
name = "php-epm"
version = "0.0.1"

# compilation metadata
edition.workspace = true

# metadata for humans
license.workspace = true
description = "An experimental PHP package manager"

[[bin]]
name = "epm"
path = "src/main.rs"

[dependencies]
bpaf = "0.9.15"
directories = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[lints]
workspace = true
